Fix overflow scrollbars in the Panel component

--- a/src/index.css
+++ b/src/index.css
@@ -137,7 +137,6 @@
   top: 5rem;
   left: 1rem;
   height: fit-content;
-  overflow: scroll;
   max-height: 80vh;
 }
 
